--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
+    "@aws-sdk/client-s3": "^3.369.0",
     "@diplodoc/client": "0.0.9",
     "@diplodoc/markdown-translation": "^0.15.0",
     "@diplodoc/mermaid-extension": "0.0.5",
@@ -40,7 +41,6 @@
     "@yandex-cloud/nodejs-sdk": "^2.2.2",
     "ajv": "^8.11.0",
     "async": "^3.2.4",
-    "aws-sdk": "2.1403.0",
     "bem-cn-lite": "^4.1.0",
     "chalk": "4.1.2",
     "dotenv": "^16.0.3",
