--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "js-yaml": "4.1.0",
     "json-stringify-safe": "^5.0.1",
     "mime-types": "2.1.35",
+    "minimatch": "^9.0.3",
     "node-html-parser": "^6.1.5",
     "shelljs": "0.8.5",
     "simple-git": "3.19.0",
