--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
     "@aws-sdk/client-s3": "^3.369.0",
-    "@diplodoc/client": "0.0.9",
+    "@diplodoc/client": "0.0.10",
     "@diplodoc/markdown-translation": "^0.15.0",
-    "@diplodoc/mermaid-extension": "0.0.5",
+    "@diplodoc/mermaid-extension": "^1.1.1",
     "@diplodoc/openapi-extension": "^1.3.0",
     "@doc-tools/transform": "^3.3.1",
     "@doc-tools/yfm2xliff": "0.0.5",
