--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@diplodoc/markdown-translation": "^0.15.0",
     "@diplodoc/mermaid-extension": "^1.1.1",
     "@diplodoc/openapi-extension": "^1.3.0",
+    "@diplodoc/tabs-extension": "0.0.5",
     "@doc-tools/transform": "^3.3.1",
     "@doc-tools/yfm2xliff": "0.0.5",
     "@octokit/core": "4.2.4",
