--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@diplodoc/markdown-translation": "^0.15.0",
     "@diplodoc/mermaid-extension": "^1.1.1",
     "@diplodoc/openapi-extension": "^1.3.0",
-    "@doc-tools/transform": "^3.3.1",
+    "@diplodoc/tabs-extension": "^2.0.3",
+    "@doc-tools/transform": "^3.5.0",
     "@doc-tools/yfm2xliff": "0.0.5",
     "@octokit/core": "4.2.4",
     "@types/glob": "^8.0.0",
