--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "build": "node scripts/build.cli.js",
-    "start": "node build/index.js",
+    "start": "node build/index.js --inspect",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run lint && npm run build"
@@ -29,12 +29,11 @@
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
     "@aws-sdk/client-s3": "^3.369.0",
-    "@diplodoc/client": "0.0.10",
+    "@diplodoc/client": "^0.0.11",
     "@diplodoc/markdown-translation": "^0.15.0",
     "@diplodoc/mermaid-extension": "^1.1.1",
     "@diplodoc/openapi-extension": "^1.3.0",
-    "@diplodoc/tabs-extension": "^2.0.4",
-    "@doc-tools/transform": "^3.6.0",
+    "@doc-tools/transform": "^3.6.1",
     "@doc-tools/yfm2xliff": "0.0.5",
     "@octokit/core": "4.2.4",
     "@types/glob": "^8.0.0",
