--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@doc-tools/docs",
+  "name": "@diplodoc/cli",
   "author": "Yandex Data UI Team <data-ui@yandex-team.ru>",
   "description": "Make documentation using yfm-docs in Markdown and HTML formats",
   "license": "MIT",
   "version": "3.25.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:yandex-cloud/yfm-docs.git"
+    "url": "git@github.com:diplodoc-platform/cli.git"
   },
   "bin": {
     "yfm": "build/index.js"
@@ -33,7 +33,7 @@
     "@diplodoc/markdown-translation": "^0.15.4",
     "@diplodoc/mermaid-extension": "^1.1.1",
     "@diplodoc/openapi-extension": "^1.3.3",
-    "@doc-tools/transform": "^3.8.5",
+    "@diplodoc/transform": "^4.0.0",
     "@doc-tools/yfm2xliff": "0.0.5",
     "@octokit/core": "4.2.4",
     "@types/glob": "^8.0.0",
