--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@apidevtools/swagger-parser": "^10.1.0",
     "@aws-sdk/client-s3": "^3.369.0",
     "@diplodoc/client": "^0.0.14",
-    "@diplodoc/markdown-translation": "^0.15.4",
+    "@diplodoc/markdown-translation": "^1.0.0-beta.1",
     "@diplodoc/mermaid-extension": "^1.1.1",
     "@diplodoc/openapi-extension": "^1.3.3",
     "@diplodoc/transform": "^4.0.0",
