--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "yargs": "17.7.2"
   },
   "devDependencies": {
-    "@diplodoc/eslint-config": "^1.0.6",
+    "@diplodoc/eslint-config": "^1.0.14",
+    "@diplodoc/prettier-config": "^1.0.0",
     "@diplodoc/tsconfig": "^1.0.2",
     "@types/async": "^3.2.15",
     "@types/chalk": "2.2.0",
@@ -78,10 +79,11 @@
     "@types/tar-stream": "^2.2.2",
     "@types/yargs": "17.0.24",
     "esbuild": "^0.17.17",
-    "eslint": "^7.32.0",
+    "eslint": "^8.0.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.2",
     "lodash": "4.17.21",
+    "prettier": "^3.0.3",
     "ts-jest": "29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "4.9.5"
