--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "git:head": "git checkout master && git pull"
   },
   "engines": {
-    "node": "18.*",
-    "npm:": "9.*"
+    "node": ">=18.*",
+    "npm:": ">=9.*"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
     "@aws-sdk/client-s3": "^3.369.0",
     "@diplodoc/client": "^1.0.2",
     "@diplodoc/markdown-translation": "^1.0.0-beta.4",
-    "@diplodoc/mermaid-extension": "^1.1.1",
-    "@diplodoc/openapi-extension": "^1.3.3",
-    "@diplodoc/transform": "^4.0.0",
+    "@diplodoc/mermaid-extension": "^1.1.3",
+    "@diplodoc/openapi-extension": "^1.4.0",
+    "@diplodoc/transform": "^4.2.1",
     "@octokit/core": "4.2.4",
     "@types/glob": "^8.0.0",
     "@types/json-stringify-safe": "^5.0.0",
@@ -88,6 +88,12 @@
     "ts-jest": "29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "4.9.5"
+  },
+  "overrides": {
+    "react-sortable-hoc": {
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0"
+    }
   },
   "husky": {
     "hooks": {
